# hamza-html-builder

./: .gitignore  CMakeLists.txt  README.md  app.cpp  html-builder.hpp  run.sh  tmp.html  x.html
includes/: builder.hpp  doctype_element.hpp  document.hpp  document_parser.hpp  element.hpp  self_closing_element.hpp
src/: builder.cpp  document_parser.cpp  element.cpp  self_closing_element.cpp
